# MCTGAuth-Bot

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
src/mctgauth_bot/: __init__.py  api.py  config.py  db.py  main.py  ratelimit.py  sweeper.py  tokens.py
src/mctgauth_bot/handlers/: __init__.py  admin.py  user.py
tests/: conftest.py  test_address.py  test_api.py  test_chat_scope.py  test_db.py  test_html_escape.py  test_panel.py  test_ping.py  test_ratelimit.py  test_sweeper.py  test_tokens.py
