[project]
name = "mctgauth-bot"
version = "0.1.0"
description = "Minecraft 离线服务器 Telegram 登录认证 Bot 服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29,<4",
    "aiosqlite>=0.21",
]

[project.scripts]
mctgauth-bot = "mctgauth_bot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mctgauth_bot"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-aiohttp>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
